[package]
name = "crabguard"
version = "0.1.0"
description = "A minimalistic CLI app for encrypted CRUD operations on local and remote storage"
edition = "2021"
authors = ["Makis Christou <makis_christou@protonmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
dotenv = "0.15.0"
hex = "0.4.3"
rand = "0.8.5"
ring = "0.16.20"
sha2 = "0.10.7"
