[package]
name = "crabguard"
version = "0.1.0"
description = "A minimalistic CLI app for encrypted CRUD operations on local and remote storage"
edition = "2021"
authors = ["Makis Christou <makis_christou@protonmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
bincode = "1.3.3"
bytes = "1.5.0"
clap = { version = "4.4.4", features = ["derive"] }
dotenv = "0.15.0"
futures-util = "0.3.28"
hex = "0.4.3"
indicatif = "0.17.7"
rand = "0.8.5"
ring = "0.16.20"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
serde = { version = "1.0.188", features = ["derive"] }
sha2 = "0.10.7"
tokio = "1.32.0"
